# mds-thesis

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: config.yaml  eda.ipynb  notebook_utils.py  stm_analysis.qmd
scripts/db/: start_opendiscourse_db.sh
scripts/mdbs/: fetch_mdbs.py
scripts/stm/: compute_seat_share.py  export_topic_labels.py  lemmatize.py  search_k.R  train.R
